[project]
name = "CSE-585-final-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
"langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.10,<3.0",
    "python-dotenv>=1.2.2",
    "langchain-google-genai",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
]
hpc = [
    "vllm>=0.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
